finally fixed flicker bug

--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -33,6 +33,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 body { 
   -webkit-user-select: none;
   user-select: none;
+  background:#9c6f57 url(../images/corkboard_background.jpg);
 }
 
 
@@ -54,7 +55,7 @@ em { font-style:italic; }
 .screen { position:absolute; top:0; left:0; width:100%; height:100%; display:none; overflow:hidden; margin:0 auto; background-image:url(../images/loader.jpg); }
 .screen_inner { position:absolute; top:10%; bottom:10%; left:10%; right:10%; width:80%; height:80%; }
 
-#loader.screen { background:#000; display:block; }
+#loader.screen { display:block; }
 #loader.screen h2.loading { margin-top:250px; text-align:center; color:#fff; font-size:48px; text-shadow:3px 3px 3px #000; }
 #loader.screen h2.loading_percentage { margin-top:0px; text-align:center; color:#fff; font-size:48px; text-shadow:3px 3px 3px #000; }
 #loading_cars { position:absolute; top:400px; left:0px; width:100%; height:30px; overflow:hidden; }
@@ -137,7 +138,7 @@ div#messages { position:absolute; top:250px; left:0px; text-align:center; width:
 #messages .new_high_score p.bttn { color:#9be; }
  
 
-#score, #high_score { position:absolute; top:10px; right:0px; z-index:20; background:url(../images/score_2.png); width:85px; height:50px; padding:20px 25px; color:#fff; text-align:right; font-size:48px; }
+#score, #high_score { position:absolute; top:10px; right:0px; z-index:20; background:url(../images/score_2.png); width:85px; height:50px; padding:20px 25px; color:#fff; text-align:right; font-size:48px; margin-bottom:10px; }
 #high_score { background-image:url(../images/high_score.png); height:20px; width: 85px; padding:16px 25px 20px; top:120px; font-size:24px; color:#eec; }
 #score.higher_score { color:#ff0; }
 #score.good { color:#9c0; }
@@ -172,12 +173,19 @@ div#messages { position:absolute; top:250px; left:0px; text-align:center; width:
 #bubbles { z-index:13; }
 
 /*canvas { border:1px solid #fff; position:absolute; }*/
+.multi_canvas { position:absolute; }
 #amber { top:210px; left:0px; }
 #baker { top:505px; left:0px; }
 #chang { top:0px; left:250px; }
 #dexter { top:0px; left:650px; }
 
-#critical { z-index:13; position:absolute; top:0; left:0; width:1024px; height:768px; background:url(../images/critical.png); opacity:0; }
+.end_game_overlay { z-index:13; position:absolute; top:0; left:0; width:1024px; height:768px; opacity:0; }
+#critical {  background:url(../images/critical.png); }
+#collision { background:url(../images/collision.png); } 
+
+.height600 .end_game_overlay { height:600px; }
+.height600 #critical { background:url(../images/critical_600.png); } 
+.height600 #collision { background:url(../images/collision_600.png); } 
 
 .hitbox { position:absolute; background:#0fc; }
 
